# machine-learning

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  main.cpp  read_minst_main.cpp
coverage/: index.html
scripts/: coverage.sh
src/: CMakeLists.txt
src/MoriorGames/: Definitions.h
src/MoriorGames/Entity/: Connection.cpp  Connection.h  Layer.cpp  Layer.h  Neuron.cpp  Neuron.h
src/MoriorGames/Parsers/: FileParser.cpp  FileParser.h  MnistParser.cpp  MnistParser.h
src/MoriorGames/Services/: CostFunction.cpp  CostFunction.h  DataTransformer.cpp  DataTransformer.h  FakeService.cpp  FakeService.h  GradientDescent.cpp  GradientDescent.h  LinearRegression.cpp  LinearRegression.h  MnistNeuralNetwork.cpp  MnistNeuralNetwork.h  Resolver.cpp  Resolver.h
src/MoriorGames/Utils/: BlockTimer.cpp  BlockTimer.h
tests/: CMakeLists.txt  test.cpp
tests/MoriorGames/Entity/: NeuronTest.cpp
tests/MoriorGames/Parsers/: FileParserTest.cpp  MnistParserTest.cpp
tests/MoriorGames/Services/: CostFunctionTest.cpp  DataTransformerTest.cpp  FakeServiceTest.cpp  GradientDescentTest.cpp  ResolverTest.cpp
tests/MoriorGames/Utils/: BlockTimerTest.cpp
tests/fixtures/: to-resolve.txt
